[package]
name = "rscompress-approximation"
version = "0.1.1"
authors = ["ucyo <cayoglu@me.com>"]
edition = "2018"
license = "MIT"
description = "Library for data approximations supporting rscompress."
homepage = "https://github.com/ucyo/rscompress"
documentation = "https://github.com/ucyo/rscompress/"
repository = "https://github.com/ucyo/rscompress/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
