[package]
name = "rscompress-coding"
version = "0.1.1"
authors = ["ucyo <cayoglu@me.com>"]
edition = "2018"
license = "MIT"
description = "Library for data coding supporting rscompress."
homepage = "https://github.com/ucyo/rscompress"
documentation = "https://github.com/ucyo/rscompress/"
repository = "https://github.com/ucyo/rscompress/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.*"

[dev-dependencies]
rand = "0.8.*"
criterion = {version = "0.3.*", features = ["html_reports"]}
pprof = {version = "0.4.*", features = ["criterion", "flamegraph"]}

[[bench]]
name = "bench"
harness = false
