[package]
name = "rscompress"
version = "0.1.3"
authors = ["ucyo <cayoglu@me.com>"]
edition = "2018"
license = "MIT"
description = "Library for compression of data."
homepage = "https://github.com/ucyo/rscompress"
documentation = "https://github.com/ucyo/rscompress/"
repository = "https://github.com/ucyo/rscompress/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rscompress-transformation = {version = "0.2.*", path = "../rscompress-transformation"}
rscompress-approximation = {version = "0.1.*", path = "../rscompress-approximation"}
rscompress-coding = {version = "0.1.*", path = "../rscompress-coding"}
rscompress-checksums = {version = "0.2.*", path = "../rscompress-checksums"}
